--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
-        <title>Natours | Exciting tours for adventurous people</title>
+        <title>Touristic | Exciting tours</title>
     </head>
 
     <body>
@@ -27,7 +27,7 @@
 
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natous</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About</a></li>
                     <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benfits</a></li>
                     <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
                     <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
@@ -43,7 +43,7 @@
 
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary--main">Outdoors</span>
+                    <span class="heading-primary--main">Advanture</span>
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
 
@@ -390,10 +390,7 @@
                 </div>
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
-                        Built by <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>.
-                        Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal
-                        and commercial use, but NOT to claim it as your own design. A credit to the original author, Jonas
-                        Schmedtmann, is of course highly appreciated!
+                        Built by <a href="http://www.okater.com" class="footer__link">Oleksandr Katerynchuk</a> during online course <a href="#" class="footer__link">Advanced CSS and Sass</a> by Jonas Schmedtmann.
                     </p>
                 </div>
             </div>
